[gd_scene load_steps=2 format=3 uid="uid://u4wq3o8q7abb"]

[ext_resource type="Script" uid="uid://c74tix6fhe841" path="res://character_manager/characters/weapon_manager.gd" id="1_shgbi"]

[node name="WeaponManager" type="Node2D"]
script = ExtResource("1_shgbi")

[node name="WeaponHit" type="Node2D" parent="."]

[node name="WeaponShoot" type="Node2D" parent="."]
